--- a/package.json
+++ b/package.json
@@ -55,9 +55,11 @@
     "fetch": "^1.0.1",
     "font-awesome": "^4.6.3",
     "isomorphic-fetch": "^2.2.1",
+    "lodash": "4.13.1",
     "luhn": "^2.1.0",
+    "node-uuid": "1.4.7",
     "normalize.css": "^4.1.1",
-    "normalizr": "^2.1.0",
+    "normalizr": "2.1.0",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-redux": "^4.4.5",
