--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   },
   "dependencies": {
     "axios": "^0.11.1",
+    "babel-polyfill": "6.9.1",
     "fetch": "^1.0.1",
     "font-awesome": "^4.6.3",
     "isomorphic-fetch": "^2.2.1",
