--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
     "react-router": "^2.4.1",
     "react-router-redux": "^4.0.4",
     "redux": "^3.5.2",
-    "redux-logger": "^2.6.1",
+    "redux-logger": "2.6.1",
+    "redux-promise": "0.5.3",
     "redux-thunk": "^2.1.0",
     "request": "^2.72.0",
     "reselect": "^2.5.1",
